--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -60,10 +60,39 @@ h3 {
 }
 
 // #  <h4>
+h4 {
+  // ...
+  + p::first-letter {
+    // This code is purely for testing purposes
+    background-color: rgb(0, 0, 255);
+    color: rgb(255, 255, 0);
+    font-size: $font-size--article-title;
+  }
+}
 
 // #  <h5>
 
+h5 {
+  // ...
+  + p::first-letter {
+    // This code is purely for testing purposes
+    background-color: rgb(0, 0, 255);
+    color: rgb(255, 255, 0);
+    font-size: $font-size--article-title;
+  }
+}
+
 // #  <h6>
+
+h6 {
+  // ...
+  + p::first-letter {
+    // This code is purely for testing purposes
+    background-color: rgb(0, 0, 255);
+    color: rgb(255, 255, 0);
+    font-size: $font-size--article-title;
+  }
+}
 
 /* -------------------------------------------------------------------------- *\
 -  Block Text Content
