--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -58,15 +58,15 @@
     // height: 100%;
     // max-height: 100vh;
     justify-content: center;
-    background-image: linear-gradient(
-      45deg,
+    background-image:
+      linear-gradient(45deg,
       $linear-gradient--red,
       $linear-gradient--orange,
-      $linear-gradient--yellow
-    );
+      $linear-gradient--yellow);
   }
 
   &__visual {
+    max-width: fit-content;
     max-height: 35vh;
     background-color: lightsalmon;
   }
@@ -95,8 +95,8 @@
   }
 
   .hot-item {
+    padding: $whitespace--xs;
     background-color: plum;
-    margin-top: $whitespace--s;
 
     &__title {
       background-color: orchid;
