style-main: css configuration v15

--- a/assets/styles/scss/abstracts/mixins/_transitions.scss
+++ b/assets/styles/scss/abstracts/mixins/_transitions.scss
@@ -22,3 +22,8 @@
     background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
   will-change: transform;
 }
+
+// -  Card
+@mixin box-transition {
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
