--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -242,7 +242,7 @@ h1 {
 }
 
 h2 {
-  color: var(--secondary-color);
+  color: var(--primary-color);
   font-family: "Montserrat", sans-serif;
   font-size: 2.44141rem;
   font-variant: normal;
@@ -260,7 +260,7 @@ h2 + p::first-letter {
 }
 
 h3 {
-  color: var(--tertiary-color);
+  color: var(--secondary-color);
   font-family: "Montserrat", sans-serif;
   font-size: 1.5625rem;
   font-variant: small-caps;
@@ -277,16 +277,52 @@ h3 + p::first-letter {
   font-size: 1.5625rem;
 }
 
+h4 {
+  color: var(--tertiary-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-variant: normal;
+  font-weight: 300;
+  letter-spacing: normal;
+  line-height: 1.5;
+  text-align: left;
+  text-transform: none;
+}
+
 h4 + p::first-letter {
   background-color: blue;
   color: yellow;
   font-size: 1.5625rem;
 }
 
+h5 {
+  color: var(--foreground-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-variant: normal;
+  font-weight: 300;
+  letter-spacing: normal;
+  line-height: 1.5;
+  text-align: left;
+  text-transform: none;
+}
+
 h5 + p::first-letter {
   background-color: blue;
   color: yellow;
   font-size: 1.5625rem;
+}
+
+h6 {
+  color: var(--foreground-color);
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-variant: normal;
+  font-weight: 300;
+  letter-spacing: normal;
+  line-height: 1.5;
+  text-align: left;
+  text-transform: none;
 }
 
 h6 + p::first-letter {
@@ -621,6 +657,10 @@ ul.menu-left.collapse {
 }
 
 .main-footer__container--contact {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: darkgreen;
 }
 
@@ -677,13 +717,13 @@ ul.menu-left.collapse {
   display: -ms-flexbox;
   display: flex;
   padding: 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -697,13 +737,14 @@ ul.menu-left.collapse {
   display: -ms-flexbox;
   display: flex;
   padding: 0.5rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -956,7 +997,7 @@ input:checked + .slider::before {
 -  SECTION 3: About
 \* -------------------------------------------------------------------------- */
 .about__container {
-  background-color: cornsilk;
+  background: radial-gradient(#003, #000);
 }
 
 .about__title {
