--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -57,16 +57,15 @@
 
   // #  wrapped-Flex Container
   @if $container-type == wrapped-flex {
+    flex-direction: $direction;
     justify-content: $justify;
 
     // #  wrapped-Flex Container Nowrap
     @if $wrap-type == nowrap {
-      flex-direction: $direction;
       align-items: $align;
     }
     // #  wrapped-Flex Container Wrap
     @else if $wrap-type == wrap {
-      flex-direction: $direction;
       align-content: $align;
     }
     // #  Invalid arguments!
@@ -78,6 +77,7 @@
 
   // #  padded-Flex Container
   @if $container-type == padded-flex {
+    flex-direction: $direction;
     justify-content: $justify;
 
     // #  padded-Flex Container Nowrap
@@ -122,11 +122,24 @@
 
 // -  <<----------<< Flex-Box >>---------->>
 
-// #  Flex-Items ---> Children
-@mixin flex-items($basis: $dimension--xxs, $grow: 1, $shrink: 1) {
-  flex-basis: $basis;
-  flex-grow: $grow;
-  flex-shrink: $shrink;
+// #  Block-Flex-Container
+@mixin block-flex-container($direction, $justify, $align) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+
+  // #  wrapped-Flex Container Nowrap
+  @if $wrap-type == nowrap {
+    align-items: $align;
+  }
+  // #  wrapped-Flex Container Wrap
+  @else if $wrap-type == wrap {
+    align-content: $align;
+  }
+  // #  Invalid arguments!
+  @else {
+    @error 'Invalid SCSS argument detected!';
+  }
 }
 
 // #  Inline-Flex-Container ---> buttons, navigation, vertical lists
@@ -135,6 +148,13 @@
   flex-direction: $direction;
   align-items: $align;
   justify-content: $justify;
+}
+
+// #  Flex-Items ---> Children
+@mixin flex-items($basis: $dimension--xxs, $grow: 1, $shrink: 1) {
+  flex-basis: $basis;
+  flex-grow: $grow;
+  flex-shrink: $shrink;
 }
 
 // -  <<----------<< Grid-Box >>---------->>
