--- a/assets/styles/scss/abstracts/mixins/_transitions.scss
+++ b/assets/styles/scss/abstracts/mixins/_transitions.scss
@@ -25,5 +25,5 @@
 
 // -  Card
 @mixin box-transition {
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
