--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -55,8 +55,6 @@
   background-size: cover;
 
   &__container {
-    // height: 100%;
-    // max-height: 100vh;
     justify-content: center;
     background-image:
       linear-gradient(45deg,
@@ -138,7 +136,8 @@
 
 .about {
   &__container {
-    background-color: cornsilk;
+    // background-color: cornsilk;
+    background: radial-gradient(#003, #000);
   }
 
   &__title {
