--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -73,6 +73,10 @@ $border-radius--xxl: 64px;
 // #  Responsive Font Scale
 $font-scale: 1.25;
 $font-size: 1rem; // 16px
+
+// -  <<----------<< Font >>---------->>
+
+// #  Font-Size
 $font-size--1: $font-size; // 16px
 $font-size--2: $font-size--1 * $font-scale; // 20px
 $font-size--3: $font-size--2 * $font-scale; // 25px
@@ -80,8 +84,6 @@ $font-size--4: $font-size--3 * $font-scale; // 31.25px
 $font-size--5: $font-size--4 * $font-scale; // 39.06px
 $font-size--6: $font-size--5 * $font-scale; // 48.83px
 $font-size--7: $font-size--6 * $font-scale; // 61.04px
-
-// -  <<----------<< Font >>---------->>
 
 // #  Font-Family
 $font-family--subject: 'Montserrat', sans-serif;
