--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -10,7 +10,7 @@
 h1 {
   color: var(--primary-color);
   font-family: $font-family--subject;
-  font-size: $font-size--subject;
+  font-size: $font-size--6;
   font-variant: $font-variant--subject;
   font-weight: $font-weight--subject;
   letter-spacing: $letter-spacing--subject;
@@ -23,7 +23,7 @@ h1 {
 h2 {
   color: var(--primary-color);
   font-family: $font-family--section-title;
-  font-size: $font-size--section-title;
+  font-size: $font-size--5;
   font-variant: $font-variant--section-title;
   font-weight: $font-weight--section-title;
   letter-spacing: $letter-spacing--section-title;
@@ -43,7 +43,7 @@ h2 {
 h3 {
   color: var(--secondary-color);
   font-family: $font-family--article-title;
-  font-size: $font-size--article-title;
+  font-size: $font-size--4;
   font-variant: $font-variant--article-title;
   font-weight: $font-weight--article-title;
   letter-spacing: $letter-spacing--article-title;
@@ -63,7 +63,7 @@ h3 {
 h4 {
   color: var(--tertiary-color);
   font-family: $font-family--text;
-  font-size: $font-size--text;
+  font-size: $font-size--3;
   font-variant: $font-variant--text;
   font-weight: $font-weight--text;
   letter-spacing: $letter-spacing--text;
@@ -84,7 +84,7 @@ h4 {
 h5 {
   color: var(--foreground-color);
   font-family: $font-family--text;
-  font-size: $font-size--text;
+  font-size: $font-size--2;
   font-variant: $font-variant--text;
   font-weight: $font-weight--text;
   letter-spacing: $letter-spacing--text;
@@ -105,7 +105,7 @@ h5 {
 h6 {
   color: var(--foreground-color);
   font-family: $font-family--text;
-  font-size: $font-size--text;
+  font-size: $font-size--1;
   font-variant: $font-variant--text;
   font-weight: $font-weight--text;
   letter-spacing: $letter-spacing--text;
