--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -162,8 +162,14 @@ $letter-spacing--text: normal;
 // #  White-Space ---> Default
 
 // -----------------------------------------------------------------------------
-// *  Temporary
+// *  Colors
 // -----------------------------------------------------------------------------
+
+// -  <<----------<< Color >>---------->>
+
+// -  <<----------<< Background-Color >>---------->>
+
+$background-color--photo-text: hsla(0, 0, 0, 0.4);
 
 // -  <<----------<< Temporary >>---------->>
 
