--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -55,3 +55,4 @@
 \* ========================================================================== */
 @import 'themes/light';
 @import 'themes/dark';
+@import 'themes/raf';
