--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -53,29 +53,29 @@
   background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
   background-position: center center;
   background-size: cover;
+  background-color: red;
 
   &__container {
     justify-content: center;
-    background-image:
-      linear-gradient(45deg,
-      $linear-gradient--red,
-      $linear-gradient--orange,
-      $linear-gradient--yellow);
+    background-color: $background-color--photo-text;
   }
 
   &__visual {
     max-width: fit-content;
-    max-height: 35vh;
-    background-color: lightsalmon;
+    max-height: 40vh;
+    // background-color: lightsalmon;
+    fill: var(--background-color);
   }
 
   &__subject {
     background-color: indianred;
+    // color: var(--background-color);
   }
 
   &__title {
     background-color: salmon;
     color: var(--tertiary-color);
+    color: var(--background-color);
   }
 }
 
