--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -55,4 +55,5 @@
 \* ========================================================================== */
 @import 'themes/light';
 @import 'themes/dark';
-@import 'themes/raf';
+@import 'themes/light--raf';
+@import 'themes/dark--raf';
