--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -414,13 +414,6 @@ img {
      object-position: center center;
 }
 
-@media (prefers-color-scheme: dark) {
-  img img {
-    -webkit-filter: brightness(0.8) contrast(1.2);
-            filter: brightness(0.8) contrast(1.2);
-  }
-}
-
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 4 - `layout/`
 \* ========================================================================== */
@@ -1081,11 +1074,11 @@ input:checked + .slider::before {
 \* -------------------------------------------------------------------------- */
 :root,
 [data-theme='light'] {
-  --foreground-color: hsl(0, 3%, 10%);
-  --background-color: hsl(240, 100%, 99%);
-  --primary-color: hsl(207, 48%, 14%);
-  --secondary-color: hsl(214, 42%, 64%);
-  --tertiary-color: hsl(23, 42%, 64%);
+  --foreground-color: hsla(240, 100%, 10%, 1);
+  --background-color: hsla(240, 100%, 99%, 1);
+  --primary-color: hsla(207, 95%, 16%, 1);
+  --secondary-color: hsla(215, 44%, 49%, 1);
+  --tertiary-color: hsla(35, 45%, 50%, 1);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -1093,18 +1086,7 @@ input:checked + .slider::before {
 \* -------------------------------------------------------------------------- */
 [data-theme='dark'] {
   --foreground-color: hsl(240, 100%, 99%);
-  --background-color: hsl(0, 3%, 10%);
-  --primary-color: hsl(27, 48%, 86%);
-  --secondary-color: hsl(34, 42%, 36%);
-  --tertiary-color: hsl(203, 42%, 36%);
-}
-
-/* -------------------------------------------------------------------------- *\
-*  _raf.scss: This partial file contains the 'raf' theme.
-\* -------------------------------------------------------------------------- */
-[data-theme='raf'] {
-  --foreground-color: hsl(240, 100%, 99%);
-  --background-color: hsl(0, 3%, 10%);
+  --background-color: hsl(240, 100%, 10%);
   --primary-color: hsl(27, 48%, 86%);
   --secondary-color: hsl(34, 42%, 36%);
   --tertiary-color: hsl(203, 42%, 36%);
