--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -35,7 +35,7 @@ h2 {
     // This code is purely for testing purposes
     background-color: rgb(0, 255, 0);
     color: rgb(255, 0, 0);
-    font-size: $font-size--article-title;
+    font-size: $font-size--3;
   }
 }
 
@@ -53,9 +53,8 @@ h3 {
 
   + p::first-letter {
     // This code is purely for testing purposes
-    background-color: rgb(0, 0, 255);
-    color: rgb(255, 255, 0);
-    font-size: $font-size--article-title;
+    color: var(--secondary-color);
+    font-size: $font-size--3;
   }
 }
 
@@ -73,16 +72,15 @@ h4 {
 
   + p::first-letter {
     // This code is purely for testing purposes
-    background-color: rgb(0, 0, 255);
-    color: rgb(255, 255, 0);
-    font-size: $font-size--article-title;
+    color: var(--secondary-color);
+    font-size: $font-size--3;
   }
 }
 
 // #  <h5>
 
 h5 {
-  color: var(--foreground-color);
+  color: var(--tertiary-color);
   font-family: $font-family--text;
   font-size: $font-size--2;
   font-variant: $font-variant--text;
@@ -94,9 +92,8 @@ h5 {
 
   + p::first-letter {
     // This code is purely for testing purposes
-    background-color: rgb(0, 0, 255);
-    color: rgb(255, 255, 0);
-    font-size: $font-size--article-title;
+    color: var(--secondary-color);
+    font-size: $font-size--3;
   }
 }
 
@@ -115,9 +112,8 @@ h6 {
 
   + p::first-letter {
     // This code is purely for testing purposes
-    background-color: rgb(0, 0, 255);
-    color: rgb(255, 255, 0);
-    font-size: $font-size--article-title;
+    color: var(--secondary-color);
+    font-size: $font-size--3;
   }
 }
 
@@ -132,7 +128,7 @@ blockquote,
 figcaption {
   color: var(--foreground-color);
   font-family: $font-family--text;
-  font-size: $font-size--text;
+  font-size: $font-size--1;
   font-variant: $font-variant--text;
   font-weight: $font-weight--text;
   letter-spacing: $letter-spacing--text;
@@ -169,7 +165,7 @@ li {
 
 a {
   color: var(--primary-color);
-  font-size: $font-size--text;
+  font-size: $font-size--1;
   text-align: center;
   text-decoration: none;
 
