--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -8,6 +8,7 @@
 
 // #  <h1>
 h1 {
+  padding: $whitespace--m;
   color: var(--primary-color);
   font-family: $font-family--subject;
   font-size: $font-size--6;
@@ -21,6 +22,7 @@ h1 {
 
 // #  <h2>
 h2 {
+  padding: $whitespace--s;
   color: var(--primary-color);
   font-family: $font-family--section-title;
   font-size: $font-size--5;
@@ -32,15 +34,14 @@ h2 {
   text-transform: $text-transform--section-title;
 
   + p::first-letter {
-    // This code is purely for testing purposes
-    background-color: rgb(0, 255, 0);
-    color: rgb(255, 0, 0);
+    color: var(--secondary-color);
     font-size: $font-size--3;
   }
 }
 
 // #  <h3>
 h3 {
+  padding: $whitespace--xs $whitespace--xxs;
   color: var(--secondary-color);
   font-family: $font-family--article-title;
   font-size: $font-size--4;
@@ -52,7 +53,6 @@ h3 {
   text-transform: $text-transform--article-title;
 
   + p::first-letter {
-    // This code is purely for testing purposes
     color: var(--secondary-color);
     font-size: $font-size--3;
   }
@@ -60,6 +60,7 @@ h3 {
 
 // #  <h4>
 h4 {
+  padding: $whitespace--xxs;
   color: var(--tertiary-color);
   font-family: $font-family--text;
   font-size: $font-size--3;
@@ -71,7 +72,6 @@ h4 {
   text-transform: $text-transform--text;
 
   + p::first-letter {
-    // This code is purely for testing purposes
     color: var(--secondary-color);
     font-size: $font-size--3;
   }
@@ -80,6 +80,7 @@ h4 {
 // #  <h5>
 
 h5 {
+  padding: $whitespace--xxs;
   color: var(--tertiary-color);
   font-family: $font-family--text;
   font-size: $font-size--2;
@@ -91,7 +92,6 @@ h5 {
   text-transform: $text-transform--text;
 
   + p::first-letter {
-    // This code is purely for testing purposes
     color: var(--secondary-color);
     font-size: $font-size--3;
   }
@@ -100,6 +100,7 @@ h5 {
 // #  <h6>
 
 h6 {
+  padding: $whitespace--xxs;
   color: var(--foreground-color);
   font-family: $font-family--text;
   font-size: $font-size--1;
@@ -111,7 +112,6 @@ h6 {
   text-transform: $text-transform--text;
 
   + p::first-letter {
-    // This code is purely for testing purposes
     color: var(--secondary-color);
     font-size: $font-size--3;
   }
@@ -126,6 +126,7 @@ p,
 li,
 blockquote,
 figcaption {
+  padding: $whitespace--xxs;
   color: var(--foreground-color);
   font-family: $font-family--text;
   font-size: $font-size--1;
