--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -136,6 +136,90 @@
   }
 }
 
+.hot-item {
+  // ...
+  &__container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 375px;
+    height: 667px;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden;
+    &:hover {
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
+
+      .hot-item {
+        &__visual {
+          transform: scale(1.25);
+        }
+
+        &__caption {
+          bottom: 0;
+        }
+      }
+    }
+  }
+
+  &__title {
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-size: 60px;
+    font-weight: 100;
+    line-height: 1;
+  }
+
+  &__visual {
+    height: 100%;
+    transition: 0.25s;
+  }
+
+  &__caption {
+    position: absolute;
+    bottom: -33%;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 30px;
+    background-color: rgba(black, 0.85);
+    box-shadow: 0 0 20px rgba(black, 0.4);
+    color: white;
+    line-height: 1;
+    transition: 0.25s;
+  }
+  &__caption-title {
+    margin: 0 0 20px;
+    padding: 0;
+  }
+
+  &__caption-text {
+    font-size: 14px;
+    line-height: 1.75;
+  }
+
+  &__caption-btn {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0 0;
+    padding: 10px 30px;
+    background-color: #1abc9c;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 14px;
+  }
+}
+
 /* -------------------------------------------------------------------------- *\
 -  Intermezzo
 \* -------------------------------------------------------------------------- */
